--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: rgb(201, 186, 53);"></path>
+                    style="stroke: none; fill: #fff;"></path>
             </svg></div>
 
 
@@ -138,8 +138,8 @@
         </section>
         <section class="about-services">
             <div class="contenedor">
-                <h2 class="titulo">nuestros servicios</h2>
-                <div class="servicio cont">
+                <h2 class="titulo">Nuestros servicios</h2>
+                <div class="servicio-cont">
                     <div class="servicio-individual">
                         <img src="img/servicio1.jpg" alt="">
                         <h3>name</h3>
@@ -177,7 +177,7 @@
                 <p>Guadalajara</p>
             </div>
         </div>
-        <h2 class="titualo-final">&copy; ArmandoG0 | Michll </h2>
+        <h2 class="titulo-final">&copy; ArmandoG0 | Michll </h2>
     </footer>
 
 </body>
