--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,6 +23,12 @@
             <a [href="#" ]>Servicios</a>
             <a [href="#" ]>Contacto</a>
         </nav>
+        <section class="form-register">
+            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Apellido">
+            <input class="controls" type="email" name="nombres" id="nombres" placeholder="Ingrese su Correo">
+            <input class="controls" type="submit" value="Registrar">
+        </section>
         <section class="textos-header">
             <h1>Potencia tus Ventas al menos un 200%</h1>
             <h2>Con una pagina web potente</h2>
